// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`returns lineNumber transactions list 1`] = `
Array [
  Object {
    "description": "$30.00 POLi payment",
    "isDebit": false,
    "startDateTime": "2020-02-01T23:32:31.000+13:00",
    "type": "Payment",
    "value": 50,
  },
  Object {
    "description": "$30.00 POLi payment",
    "isDebit": true,
    "startDateTime": "2020-02-02T23:32:31.000+13:00",
    "type": "Payment",
    "value": 30,
  },
  Object {
    "description": "$30.00 POLi payment",
    "isDebit": false,
    "startDateTime": "2020-02-03T23:32:31.000+13:00",
    "type": "Payment",
    "value": 30,
  },
  Object {
    "description": "$90.00 POLi payment",
    "isDebit": false,
    "startDateTime": "2020-07-04T23:32:31.000+13:00",
    "type": "Payment",
    "value": 90,
  },
  Object {
    "description": "$70.00 POLi payment",
    "isDebit": true,
    "startDateTime": "2020-03-05T23:32:31.000+13:00",
    "type": "Payment",
    "value": 30,
  },
  Object {
    "description": "$70.00 POLi payment",
    "isDebit": true,
    "startDateTime": "2020-09-06T23:32:31.000+13:00",
    "type": "Payment",
    "value": 30,
  },
  Object {
    "description": "$15.00 Poli payment",
    "isDebit": true,
    "startDateTime": "2020-03-07T23:32:31.000+13:00",
    "type": "Payment",
    "value": 30,
  },
  Object {
    "description": "$70.00 POLi payment",
    "isDebit": false,
    "startDateTime": "2020-12-08T23:32:31.000+13:00",
    "type": "Payment",
    "value": 30,
  },
  Object {
    "description": "$50.00 POLi payment",
    "isDebit": true,
    "startDateTime": "2020-09-09T23:32:31.000+13:00",
    "type": "Payment",
    "value": 30,
  },
  Object {
    "description": "$70.00 POLi payment",
    "isDebit": true,
    "startDateTime": "2020-09-10T23:32:31.000+13:00",
    "type": "Payment",
    "value": 30,
  },
  Object {
    "description": "$100.00 ANZ payment",
    "isDebit": false,
    "startDateTime": "2020-09-11T23:32:31.000+13:00",
    "type": "Payment",
    "value": 30,
  },
  Object {
    "description": "$70.00 POLi payment",
    "isDebit": false,
    "startDateTime": "2020-09-12T23:32:31.000+13:00",
    "type": "Payment",
    "value": 30,
  },
  Object {
    "description": "$70.00 POLi payment",
    "isDebit": false,
    "startDateTime": "2020-09-13T23:32:31.000+13:00",
    "type": "Payment",
    "value": 30,
  },
  Object {
    "description": "$70.00 POLi payment",
    "isDebit": false,
    "startDateTime": "2020-09-14T23:32:31.000+13:00",
    "type": "Payment",
    "value": 30,
  },
  Object {
    "description": "$70.00 POLi payment",
    "isDebit": false,
    "startDateTime": "2020-09-15T23:32:31.000+13:00",
    "type": "Payment",
    "value": 30,
  },
  Object {
    "description": "$70.00 POLi payment",
    "isDebit": false,
    "startDateTime": "2020-09-16T23:32:31.000+13:00",
    "type": "Payment",
    "value": 30,
  },
  Object {
    "description": "$70.00 POLi payment",
    "isDebit": false,
    "startDateTime": "2020-09-17T23:32:31.000+13:00",
    "type": "Payment",
    "value": 30,
  },
]
`;

exports[`returns lineNumber transactions list with paymentstatus APPLIED only 1`] = `
Array [
  Object {
    "description": "$30.00 POLi payment",
    "isDebit": false,
    "startDateTime": "2020-02-01T23:32:31.000+13:00",
    "type": "Payment",
    "value": 50,
  },
  Object {
    "description": "$30.00 POLi payment",
    "isDebit": false,
    "startDateTime": "2020-02-03T23:32:31.000+13:00",
    "type": "Payment",
    "value": 30,
  },
  Object {
    "description": "$90.00 POLi payment",
    "isDebit": false,
    "startDateTime": "2020-07-04T23:32:31.000+13:00",
    "type": "Payment",
    "value": 90,
  },
  Object {
    "description": "$70.00 POLi payment",
    "isDebit": true,
    "startDateTime": "2020-03-05T23:32:31.000+13:00",
    "type": "Payment",
    "value": 30,
  },
  Object {
    "description": "$70.00 POLi payment",
    "isDebit": true,
    "startDateTime": "2020-09-06T23:32:31.000+13:00",
    "type": "Payment",
    "value": 30,
  },
  Object {
    "description": "$15.00 Poli payment",
    "isDebit": true,
    "startDateTime": "2020-03-07T23:32:31.000+13:00",
    "type": "Payment",
    "value": 30,
  },
  Object {
    "description": "$70.00 POLi payment",
    "isDebit": false,
    "startDateTime": "2020-12-08T23:32:31.000+13:00",
    "type": "Payment",
    "value": 30,
  },
  Object {
    "description": "$50.00 POLi payment",
    "isDebit": true,
    "startDateTime": "2020-09-09T23:32:31.000+13:00",
    "type": "Payment",
    "value": 30,
  },
  Object {
    "description": "$70.00 POLi payment",
    "isDebit": true,
    "startDateTime": "2020-09-10T23:32:31.000+13:00",
    "type": "Payment",
    "value": 30,
  },
  Object {
    "description": "$100.00 ANZ payment",
    "isDebit": false,
    "startDateTime": "2020-09-11T23:32:31.000+13:00",
    "type": "Payment",
    "value": 30,
  },
  Object {
    "description": "$70.00 POLi payment",
    "isDebit": false,
    "startDateTime": "2020-09-12T23:32:31.000+13:00",
    "type": "Payment",
    "value": 30,
  },
  Object {
    "description": "$70.00 POLi payment",
    "isDebit": false,
    "startDateTime": "2020-09-13T23:32:31.000+13:00",
    "type": "Payment",
    "value": 30,
  },
  Object {
    "description": "$70.00 POLi payment",
    "isDebit": false,
    "startDateTime": "2020-09-14T23:32:31.000+13:00",
    "type": "Payment",
    "value": 30,
  },
  Object {
    "description": "$70.00 POLi payment",
    "isDebit": false,
    "startDateTime": "2020-09-15T23:32:31.000+13:00",
    "type": "Payment",
    "value": 30,
  },
  Object {
    "description": "$70.00 POLi payment",
    "isDebit": false,
    "startDateTime": "2020-09-16T23:32:31.000+13:00",
    "type": "Payment",
    "value": 30,
  },
  Object {
    "description": "$70.00 POLi payment",
    "isDebit": false,
    "startDateTime": "2020-09-17T23:32:31.000+13:00",
    "type": "Payment",
    "value": 30,
  },
]
`;
